--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,57 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+li{
+    list-style-type: none;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  .listItem-1{
+    height: 90vh;
   }
-  to {
-    transform: rotate(360deg);
+  .listItem-inner-1:hover{
+    background-color: #F5F5F5;
   }
-}
+  .listItem-inner-1:hover, .listItem-inner-2:hover{
+    background-color: #F5F5F5;
+    cursor: pointer;
+  }
+  .listItem-2{
+    background-color: #ffececa6;
+    height: 90vh;
+  }
+  .listItem-3{
+    background-color: #ffececa6;
+    height: 90vh;
+  }
+  .btn-sort:hover{
+    background-color: #FDFDFD;
+    cursor: pointer;
+  }
+  
+  .dropbtn {
+    color: black;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+  }
+  
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  .dropdown-content a:hover {background-color: #ddd;}
+  
+  .dropdown.active .dropdown-content {display: block;}
